--- a/client/src/components/shop/home/style.css
+++ b/client/src/components/shop/home/style.css
@@ -25,3 +25,14 @@
   background: #b7791f;
   cursor: pointer;
 }
+
+.cardProduct {
+  box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.05), 0 8px 16px -8px hsla(0, 0%, 0%, 0.05), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.05);
+  transition: all ease 200ms;
+  padding: "10px"
+}
+
+.cardProduct:hover {
+  transform: scale(1.03);
+  box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12), 0 8px 32px -8px hsla(0, 0%, 0%, 0.14), 0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
+}
